--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^3.4.4",
     "sass-autoprefixer": "^1.0.1"
   },
   "scripts": {
@@ -34,5 +34,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DaLVeRS2001/DaLVeRS2001.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/DaLVeRS2001/DaLVeRS2001/issues"
+  },
+  "homepage": "https://github.com/DaLVeRS2001/DaLVeRS2001#readme"
 }
