--- a/package.json
+++ b/package.json
@@ -46,5 +46,5 @@
   "bugs": {
     "url": "https://github.com/DaLVeRS2001/DaLVeRS2001/issues"
   },
-  "homepage": "https://github.com/DaLVeRS2001/DaLVeRS2001#readme"
+  "homepage": "https://github.com/DaLVeRS2001"
 }
